# LLm-Protect

./: .env.template  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.inputprep  Dockerfile.layer0  END_TO_END_TESTING_GUIDE.md  GUARD_SYSTEM_README.md  IMAGE_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_GETTING_STARTED.md  REORGANIZATION_SUMMARY.md  SECURITY_LAYER_GUIDE.md  START.md  TEST_RESULTS.md  USAGE.md  auto_shutdown.sh  deploy.ps1  deploy.sh  docker-compose.yml  fix_and_test.sh  pyproject.toml  requirements.txt  setup-amd.sh  start_server.sh  test_pipeline.py  test_security.py  verify_output_integrity.py
Input Prep/: BEFORE_AFTER_COMPARISON.md  INSTALLATION_GUIDE.md  QUICK_REFERENCE.md  README.md
app/: config.py  main.py
config/: __init__.py  emoji_risk_map.json  security_config.py
contracts/: PROJECT_ANALYSIS_SUMMARY.md  __init__.py  manifest.py  shared.py
examples/: README.md  advanced_scanning.py  basic_usage.py
image_processing/: __init__.py  core.py
input_prep/: __init__.py  core.py
layer0/: __init__.py  __main__.py  api.py  code_detector.py  config.py  dataset_loader.py  models.py  normalizer.py  prefilter.py  regex_engine.py  rule_registry.py  scanner.py
monitoring/: prometheus.yml
pipeline/: COMPLETE_SETUP_AND_RUN_GUIDE.md  __init__.py  main.py
scripts/: create_advanced_stego_tests.py  create_stego_test_images.py  create_test_images.py  demo_guard.py  run_server.py  test_guard_quick.py
security/: __init__.py
tests/: quick_test.py  test_api.py  test_guard_integration.py  test_layer0_api.py  test_layer0_comprehensive.py
tools/: cli_tester.py  l0.py  quick_perf_test.py
website/: __init__.py  serve.py
(+156 files in other folders)
