[tool.poetry]
name = "layer0-security-filter"
version = "1.0.0"
description = "Enterprise Layer-0 Security Filter System for LLM pipelines"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "layer0"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0"
python-re2 = {version = "^1.1.0", optional = true}
regex = "^2023.10.0"
prometheus-client = "^0.19.0"
unicodedata2 = "^15.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
types-pyyaml = "^6.0.12"

[tool.poetry.extras]
re2 = ["python-re2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=layer0 --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["layer0"]
omit = ["tests/*", "bench/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
